# forge

./: .gitignore  CHANGELOG.txt  MANIFEST.in  README.md  forge.md  index.html  main.py  pyproject.toml  repo_to_modal.sh
data/: data_splits_to_mip_instances.txt  download.py  hf_to_local.py  iclr26_fine_tune_integral_gap.txt  iclr26_fine_tune_variable_proba.txt  iclr26_test_integral_gap.txt  miplib.txt  pretrain.txt  readme.md  test_pretrain.txt  test_variable_proba.txt
data/configs/: all.txt  all_dmiplib.txt  all_miplib.txt  all_striplib.txt  dmiplib.txt  fine_tune_integral_gap.txt  g4satbench_test.txt  g4satbench_test_easy.txt  g4satbench_test_easy_sat.txt  g4satbench_test_easy_unsat.txt  g4satbench_test_hard.txt  g4satbench_test_hard_sat.txt  g4satbench_test_hard_unsat.txt  g4satbench_test_medium.txt  g4satbench_test_medium_sat.txt  g4satbench_test_medium_unsat.txt  g4satbench_test_sat.txt  g4satbench_test_unsat.txt  iclr26_pretrain.txt  iclr26_test_pretrain.txt  iclr26_test_variable_proba.txt  iclr_fine_tune_integral_gap.txt  iclr_fine_tune_variable_proba.txt  iclr_forge_pretrain.txt  iclr_pretrain_clusters.txt  iclr_pretrain_clusters_with_relaxed.txt  mipfeas.txt  mipfeas_large.txt  pretrain_clusters_small.txt  satcomp2022anni_subset_train.txt  satcomp2022anni_train.txt  test.txt  (+7 more)
examples/: pretrain.py
experiments/: cluster.ipynb  modal.ipynb  playbook.ipynb
forge/: __init__.py  _wgsage.py  embeddings.py  labeler.py  pipeline.py  processor.py  train_config.yaml  utils.py
models/: hf_to_modal.py  local_to_hf.py  local_to_modal.py  skipped.txt  upload.py
scripts/: check_gradient_flow.py  finetune_integral_gap.py  finetune_sat_prediction.py  finetune_variable_proba.py  mip_to_embeddings.py  mip_to_gap_info.py  mip_to_gapinfo.py  mip_to_hint.py  mip_to_mipinfo.py  mixed_pretrain.py  pretrain.py  random_forge.py  run_sat_embeddings.py  run_sat_embeddings_concat_mean.py  sat_pretrain.py  sat_pretrain_single_gpu.py  sat_to_embeddings.py  sat_to_mip.py  sat_to_satinfo.py  test_sat_prediction.py  visualize_clusters.py  vq_diagnostics.py
tests/: test_base.py  test_embeddings.py  test_examples.py  test_labeler.py  test_mipinfo.py  test_miputils.py  test_pretrain.py  test_processor.py  test_readme.py  test_static_mip.py
(+124 files in other folders)
